# compose-area

./: .gitignore  1.bootstrap.js  2.bootstrap.js  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  benchmark.html  bootstrap.0.bundle.js  bootstrap.0.bundle.js.map  bootstrap.2.bundle.js  bootstrap.2.bundle.js.map  bootstrap.3.bundle.js  bootstrap.3.bundle.js.map  bootstrap.4.bundle.js  bootstrap.4.bundle.js.map  bootstrap.5.bundle.js  bootstrap.5.bundle.js.map  bootstrap.benchmark.bundle.js  bootstrap.benchmark.bundle.js.map  bootstrap.demo.bundle.js  bootstrap.demo.bundle.js.map  bootstrap.js  index.html
.circleci/: config.yml
scripts/: package.sh
selenium/: index.ts  package-lock.json  package.json  tests.ts  tsconfig.json
src/: caret_pos.rs  extract.rs  keys.rs  lib.rs  macros.rs  selection.rs  state.rs  utils.rs
tests/: helpers.rs  web.rs
tests/helpers/: mod.rs
www/: benchmark.html  benchmark.js  bootstrap.benchmark.js  index.html  index.js  package-lock.json  package.json  prod.js  webpack.common.js  webpack.dev.js  webpack.prod.js
