[package]
name = "compose-area"
description = "A compose area with support for Emoji, written with Rust + Webassembly."
version = "0.3.5"
authors = ["Danilo Bargen <danilo.bargen@threema.ch>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/threema-ch/compose-area"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = { version = "=0.2.58", features = ["spans", "std"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

# Add logging support
log = "0.4"
console_log = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "CharacterData",
    "Document",
    "DomTokenList",
    "Element",
    "HtmlDocument",
    "HtmlElement",
    "HtmlImageElement",
    "Node",
    "NodeList",
    "Range",
    "Selection",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
virtual-dom-rs = "0.6"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
